--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -59,6 +59,17 @@
                 app:layout_constraintStart_toEndOf="@+id/skip"
                 app:layout_constraintTop_toBottomOf="@+id/textField" />
 
+            <Spinner
+                android:id="@+id/language_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                android:textSize="17sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/skip"
+                tools:layout_editor_absoluteX="16dp" />
+
             <TextView
                 android:id="@+id/textView_instructions"
                 android:layout_width="wrap_content"
@@ -76,8 +87,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_margin"
                 android:layout_marginBottom="@dimen/default_margin"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                 android:text="@{gameViewModel.currentScrambledWord}"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                 app:layout_constraintBottom_toTopOf="@+id/textView_instructions"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
